<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">
    <!--top part-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top_part"
        android:layout_width="match_parent"
        android:layout_height="0dp"

        android:background="@color/primary_background"
        app:layout_constraintBottom_toTopOf="@id/guide_topAndBottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/welcome_text"
            android:textColor="@color/secondary_background"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_btn_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:backgroundTint="@color/secondary_background"
            android:elevation="10dp"
            app:cardCornerRadius="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/btn_profile"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_user" />

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="2dp"
        android:background="@color/tertiary_background"
        app:layout_constraintBottom_toBottomOf="@id/guide_topAndBottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guide_topAndBottom" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_topAndBottom"
        android:layout_width="wrap_content"
        android:layout_height="5dp"
        android:background="@color/tertiary_background"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.12" />

    <!--temp recycler view part-->
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/primary_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guide_topAndBottom">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="serif"
                android:text="@string/popular"
                android:textColor="@color/secondary_background"
                android:textSize="18sp"
                android:textStyle="bold" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/most_popular_movies"
                android:textColor="@color/secondary_background" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_popular_movies"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:clipToPadding="false"
                android:paddingStart="16dp"
                android:paddingEnd="16dp" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="serif"
                android:text="@string/top_rated"
                android:textColor="@color/secondary_background"
                android:textSize="18sp"
                android:textStyle="bold" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/highest_rated_movies"
                android:textColor="@color/secondary_background" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_top_rated_movies"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:clipToPadding="false"
                android:paddingStart="16dp"
                android:paddingEnd="16dp" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="serif"
                android:text="@string/upcoming"
                android:textColor="@color/secondary_background"
                android:textSize="18sp"
                android:textStyle="bold" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/stay_updated"
                android:textColor="@color/secondary_background" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_upcoming_movies"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:clipToPadding="false"
                android:paddingStart="16dp"
                android:paddingEnd="16dp" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>