<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_background"
    tools:context=".ui.profile.ProfileUpdateFragment">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_update_username"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="18dp"
                android:hint="@string/hint_name"
                android:textColorHint="@color/primary_background"
                app:boxCornerRadiusBottomEnd="16dp"
                app:boxCornerRadiusBottomStart="16dp"
                app:boxCornerRadiusTopEnd="16dp"
                app:boxCornerRadiusTopStart="16dp"
                app:boxStrokeColor="@color/secondary_background"
                app:errorEnabled="true"
                app:hintTextColor="@color/primary_background"
                app:layout_constraintBottom_toTopOf="@id/til_update_email"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:startIconDrawable="@drawable/ic_user"
                app:startIconTint="@color/primary_background">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_update_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"
                    android:textColor="@color/primary_background"
                    android:textCursorDrawable="@null" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_update_email"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginEnd="18dp"
                android:hint="@string/hint_email"
                android:textColorHint="@color/primary_background"
                app:boxCornerRadiusBottomEnd="16dp"
                app:boxCornerRadiusBottomStart="16dp"
                app:boxCornerRadiusTopEnd="16dp"
                app:boxCornerRadiusTopStart="16dp"
                app:boxStrokeColor="@color/secondary_background"
                app:errorEnabled="true"
                app:hintTextColor="@color/primary_background"
                app:layout_constraintBottom_toTopOf="@id/til_update_password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_update_username"
                app:startIconDrawable="@drawable/ic_email"
                app:startIconTint="@color/primary_background">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_update_email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textEmailAddress"
                    android:textCursorDrawable="@null" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_update_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginEnd="18dp"
                android:hint="@string/hint_password"
                android:textColorHint="@color/primary_background"
                app:boxCornerRadiusBottomEnd="16dp"
                app:boxCornerRadiusBottomStart="16dp"
                app:boxCornerRadiusTopEnd="16dp"
                app:boxCornerRadiusTopStart="16dp"
                app:boxStrokeColor="@color/secondary_background"
                app:errorEnabled="true"
                app:hintTextColor="@color/primary_background"
                app:layout_constraintBottom_toTopOf="@id/til_update_passwordConfirm"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_update_email"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/primary_background"
                app:startIconDrawable="@drawable/ic_password"
                app:startIconTint="@color/primary_background">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_update_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword"
                    android:textColor="@color/primary_background"
                    android:textCursorDrawable="@null" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_update_passwordConfirm"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginEnd="18dp"
                android:hint="@string/hint_re_type_password"
                android:textColorHint="@color/primary_background"
                app:boxCornerRadiusBottomEnd="16dp"
                app:boxCornerRadiusBottomStart="16dp"
                app:boxCornerRadiusTopEnd="16dp"
                app:boxCornerRadiusTopStart="16dp"
                app:boxStrokeColor="@color/secondary_background"
                app:errorEnabled="true"
                app:hintTextColor="@color/primary_background"
                app:layout_constraintBottom_toTopOf="@id/btn_update"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_update_password"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/primary_background"
                app:startIconDrawable="@drawable/ic_password"
                app:startIconTint="@color/primary_background">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_update_passwordConfirm"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword"
                    android:textColor="@color/primary_background"
                    android:textCursorDrawable="@null" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginEnd="18dp"
                android:layout_marginBottom="24dp"
                android:backgroundTint="@color/secondary_background"
                android:text="@string/hint_btn_update"
                android:textAllCaps="false"
                android:textColor="@color/primary_background"
                android:textSize="18sp"
                app:cornerRadius="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:rippleColor="@color/tertiary_background" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>